[package]
name = "boomerang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "./server" }
tui = { path = "./tui" }
serde = {version="1.0.189",features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.32.0", features = ["full"]}
async-std = "1.12.0"
rand = "0.8.5"
clap = {version = "4.4.6",features = ["derive"]}
