[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
async-trait = "0.1.73"
async-recursion = "1.0.5"
async-std = "1.12.0"
serde = {version="1.0.189",features = ["derive"]}
serde_json = "1.0"
dyn-clone = "1.0.14"