[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossterm = "0.27"
async-trait = "0.1"
tokio = { version = "1.32.0", features = ["full"] }
strum = "0.25"
strum_macros = "0.25"
[dependencies.ratatui]
version = "0.23.0"
features = ["crossterm"]
default-features = false
